--- a/pblisbon/src/app/components/Header/Button/style.module.scss
+++ b/pblisbon/src/app/components/Header/Button/style.module.scss
@@ -2,8 +2,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 100px;
-    height: 40px;
+    width: 90px;
+    height: 35px;
     cursor: pointer;
     border-radius: 25px;
     overflow: hidden;
@@ -16,19 +16,21 @@
         .el{
             width: 100%;
             height: 100%;
-            background-color: #c9fd74;
+            background-color: #f55e41;
             p{
                 margin: 0px;
+                font-size: 15px;
             }
             &:nth-of-type(2){
                 background-color: black;
                 p{
-                    color: #c9fd74;
+                    color: #f5f5f5;
                 }
             }
             &:hover{
                 .perspectiveText{
                     transform: rotateX(90deg);
+                    color: #f5f5f5;
                     p{
                         &:nth-of-type(1){
                             transform: translateY(-100%);
@@ -46,6 +48,7 @@
 }
 
 .perspectiveText{
+    color: #f5f5f5;
     display: flex;
     flex-direction: column;
     justify-content: center;
