--- a/pblisbon/src/app/components/Header/Nav/style.module.scss
+++ b/pblisbon/src/app/components/Header/Nav/style.module.scss
@@ -15,7 +15,7 @@
         }
         a{
             text-decoration: none;
-            color: black;
+            color: #f5f5f5;
             font-size: 2rem;
         }
     }
@@ -25,6 +25,7 @@
         a{
             width: 50%;
             margin-top: 5px;
+            color: #f5f5f5;
         }
     }
 }
