--- a/pblisbon/src/app/components/Header/Button/style.module.scss
+++ b/pblisbon/src/app/components/Header/Button/style.module.scss
@@ -1,9 +1,9 @@
 .button{
     position: absolute;
-    top: 0;
+    top: 5px;
     right: 0;
-    width: 90px;
-    height: 35px;
+    width: 80px;
+    height: 30px;
     cursor: pointer;
     border-radius: 25px;
     overflow: hidden;
