--- a/pblisbon/src/app/globals.css
+++ b/pblisbon/src/app/globals.css
@@ -21,6 +21,8 @@ body{
   font-family: 'Satoshi', sans-serif;
   max-width: 2560px;
   margin: 0 auto;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 /*
@@ -94,6 +96,11 @@ p, h1, h2, h3, h4, h5, h6 {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
+
+  body {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 @media only screen and (max-width: 1269px) {
   .parentTwo {
@@ -113,3 +120,5 @@ p, h1, h2, h3, h4, h5, h6 {
   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 
 }
+
+
