--- a/pblisbon/src/app/components/acording/acc.module.css
+++ b/pblisbon/src/app/components/acording/acc.module.css
@@ -1,19 +1,27 @@
-/* Accordion.module.css */
-
 .accordion {
   width: 100%;
-  padding-top: 3rem;
-  padding-bottom: 2rem;
+  background: var(--orange);
+  border-radius: 24px;
+  margin-top: 50px;
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 @media only screen and (max-width: 990px) {
   .accordion {
     padding-top: 10px;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 .accordionItem {
   margin-bottom: 10px;
+  padding-top: 2rem;
+}
+
+.accordionItem:last-child {
+  padding-bottom: 2rem;
 }
 
 .accordionTitle {
@@ -27,7 +35,17 @@
 }
 
 .accordionContent {
-  padding: 10px;
+  padding: 0 30px;
+  background: #fff;
+  border-radius: 20px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease, padding 0.3s ease;
+}
+
+.accordionContent.expanded {
+  padding: 15px 15px 30px 15px;
+  max-height: 1000px; /* Ensure this value is large enough to fit the tallest content */
 }
 
 @media only screen and (min-width: 1536px) {
